--- a/grip/index.css
+++ b/grip/index.css
@@ -4,4 +4,38 @@ body {
     margin:0px;
     padding:0px;
     font-family: 'Muli', sans-serif;
+    background:url("https://images.unsplash.com/34/BA1yLjNnQCI1yisIZGEi_2013-07-16_1922_IMG_9873.jpg?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1051&q=80");
+    background-size:cover;
+    background-repeat:no-repeat;
+}
+
+header {
+    width:90vw;
+    padding:5vh 5vw;
+}
+header table {
+    width:100%;
+    font-weight:bold;
+}
+header table tr td {
+    width:50%;
+}
+.logo {
+    font-size:19px;
+}
+nav {
+    text-align:right;
+}
+nav a {
+    margin:0px 2vw;
+    padding:5px 10px;
+    border-bottom:2px solid transparent;
+    color:#fff;
+    text-decoration:none;
+    transition:0.4s ease-in-out;
+    font-size:16px;
+}
+nav a:hover {
+    color:rgb(244, 255, 87);
+    border-bottom:2px solid rgb(103, 68, 255);
 }
