--- a/index.css
+++ b/index.css
@@ -3,9 +3,9 @@ body,html{
     margin:0px;
     font-family: 'Comfortaa', cursive;
     font-weight:bold;
-    background:url("https://images.unsplash.com/photo-1498036882173-b41c28a8ba34?ixlib=rb-1.2.1&auto=format&fit=crop&q=100") center center fixed;
-    background-size:140% auto;
-    transition:0.8s ease-in-out;
+    background:url("background.jpg") center center fixed;
+    background-size:100% auto;
+    transition:1.6s ease-in-out;
     }
 #header {
     width:80%;
@@ -43,23 +43,47 @@ body,html{
     width: 100%;
     height: 100vh;
     position: fixed;
-    background: white;
     z-index: 9999;
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
     align-items: center;
     font-family: 'Poppins', sans-serif;
 }
 
+#leftThingy {
+    width:50vw;
+    height:100%;
+    background:#fff;
+    position:fixed;
+    left:0;
+}
+
+#RightThingy {
+    width:50vw;
+    height:100%;
+    background:#fff;
+    position:fixed;
+    right:0;
+}
+
+#text {
+    width:100vw;
+    height:100vh;
+    text-align:center;
+    position:fixed;
+    left:0;
+    right:0;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+}
+
 #spinner {
-    animation: rotate 1s infinite linear;
-    width:25px;
-    height:25px;
-    border:5px solid #000;
-    border-bottom:5px solid white;
-    border-radius: 100px;
-    margin: 0;
+    animation: rotate 0.8s infinite linear;
+    width:40px;
+    height:40px;
+    border:6px solid #000;
+    border-bottom:6px solid white;
+    border-radius:50%;
+    margin: 0px auto;
 }
 
 @keyframes rotate {
@@ -75,17 +99,11 @@ body,html{
     width:100%;
     height:100vh;
     border-radius:0px;
-    background:linear-gradient(-225deg, rgba(56, 141, 250, 0.68) 0%, rgba(159, 89, 242,0.68) 29%, rgba(245, 47, 98,0.68) 67%, rgba(168, 127, 2, 0.68) 100%);
     color:white;
     display:flex;
     justify-content:center;
     flex-direction:column;
     transition:0.4s ease-in-out;
-    background-size:500% 500% !important;
-    -webkit-animation: Gradient 100s ease infinite;
-    -moz-animation: Gradient 100s ease infinite;
-    -o-animation: Gradient 100s ease infinite;
-    animation: Gradient 100s ease infinite;
     z-index:4;
 }
 #tagline {
@@ -93,13 +111,17 @@ body,html{
     width:60%;
     margin-top:6vh;
 }
-#tagline a{
-    padding:10px 40px;
-    transition:0.4s ease-in-out;
-}
-#tagline a:hover{
-    transform:scale(1.1);
-    cursor:pointer;
+#tagline span {
+    background-image:linear-gradient(-225deg, rgb(56, 141, 250) 0%, rgb(159, 89, 242) 29%, rgb(245, 47, 98) 67%, rgb(245, 194, 47) 100%);
+    -webkit-background-clip:text;
+    background-clip:text;
+    -webkit-text-fill-color: transparent;
+    background-size:500% 500% !important;
+    -webkit-animation: Gradient 100s ease infinite;
+    -moz-animation: Gradient 100s ease infinite;
+    -o-animation: Gradient 100s ease infinite;
+    animation: Gradient 100s ease infinite;
+    font-family: 'Comfortaa', cursive;
 }
 #portfolio {
     background:white;
@@ -213,6 +235,10 @@ body,html{
     box-shadow:0px 6px 10px #d5d5d5;
 }
 @media (max-width: 800px){
+    body {
+        background-size:cover !important;
+        background-repeat:no-repeat;
+    }
     #header {
         width:94%;
         padding:10% 3%;
