--- a/grip/index.css
+++ b/grip/index.css
@@ -1,12 +1,17 @@
-@import url('https://fonts.googleapis.com/css?family=Muli');
+@import url('https://fonts.googleapis.com/css?family=Poppins');
 
 body {
     margin:0px;
     padding:0px;
-    font-family: 'Muli', sans-serif;
-    background:url("https://images.unsplash.com/34/BA1yLjNnQCI1yisIZGEi_2013-07-16_1922_IMG_9873.jpg?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1051&q=80");
+    font-family: 'Poppins', sans-serif;
+    background:linear-gradient(0deg,rgba(15,15,15,1),rgba(15,15,15,0.4)),url("https://images.unsplash.com/photo-1512805147242-c3e79caf64bf?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9w=1050&q=80") center center fixed;
     background-size:cover;
     background-repeat:no-repeat;
+    width:100vw;
+    height:100vh;
+    max-width:100vw;
+    overflow-x:hidden;
+    transition:3s ease-in-out;
 }
 
 header {
@@ -17,25 +22,104 @@ header table {
     width:100%;
     font-weight:bold;
 }
-header table tr td {
-    width:50%;
-}
 .logo {
-    font-size:19px;
+    font-size:24px;
+    width:30% !important;
+    color:#fff;
+}
+header table tr td {
+    width:70%;
 }
 nav {
     text-align:right;
 }
 nav a {
-    margin:0px 2vw;
-    padding:5px 10px;
-    border-bottom:2px solid transparent;
+    margin:0px 1.5vw;
+    padding:5px 6px;
     color:#fff;
     text-decoration:none;
     transition:0.4s ease-in-out;
     font-size:16px;
 }
 nav a:hover {
-    color:rgb(244, 255, 87);
-    border-bottom:2px solid rgb(103, 68, 255);
+    color:rgb(255, 80, 109);
+}
+nav button{
+    margin:0px 1.5vw;
+    padding:4px 40px;
+    border:2px solid rgb(255, 80, 109);
+    color:rgb(255, 80, 109);
+    text-decoration:none;
+    transition:0.4s ease-in-out;
+    font-size:16px;
+    border-radius:50px;
+    font-family: 'Poppins', sans-serif;
+    font-weight:bold;
+    background:transparent;
+}
+nav button:hover {
+    color:#fff;
+    background:rgb(255, 80, 109);
+    border:2px solid rgb(255, 80, 109);
+    cursor: pointer;
+}
+#middle {
+    position:absolute;
+    width:100vw;
+    height:100vh;
+    background:transparent;
+    display:flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align:center;
+    top:0;
+    bottom:0;
+    left:0;
+    right:0;
+    color:#fff;
+}
+#top_head {
+    font-size:65px;
+    font-weight: bold;
+    margin:1vh 0px;
+    margin-top:30vh !important;
+}
+#middle_head {
+    font-size:26px;
+    font-weight:bold;
+    margin:1vh 0px;
+}
+#middle button {
+    margin:6vh auto;
+    padding:10px 40px;
+    border:3px solid rgb(255, 80, 109);
+    color:rgb(255, 80, 109);
+    text-decoration:none;
+    transition:0.4s ease-in-out;
+    font-size:19px;
+    border-radius:50px;
+    font-family: 'Poppins', sans-serif;
+    font-weight:bold;
+    background:transparent;
+    width:20vw;
+}
+#main {
+    width:100vw;
+    height:100vh;
+    background:rgb(15,15,15);
+    margin-top:84vh;
+    color:#fff;
+    font-size:30px;
+    text-align:center;
+    padding:5vh 0px;
+}
+::-webkit-scrollbar {
+    width:5px;
+    height:5px;
+}
+::-webkit-scrollbar-track {
+    background:#000; 
+}
+::-webkit-scrollbar-thumb {
+    background:#fff; 
 }
