--- a/grip/index.css
+++ b/grip/index.css
@@ -4,7 +4,7 @@ body {
     margin:0px;
     padding:0px;
     font-family: 'Poppins', sans-serif;
-    background:linear-gradient(0deg,rgba(15,15,15,1),rgba(15,15,15,0.4)),url("https://images.unsplash.com/photo-1512805147242-c3e79caf64bf?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9w=1050&q=80") center center fixed;
+    background:url("https://images.unsplash.com/photo-1512805147242-c3e79caf64bf?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9w=1050&q=80") center center fixed;
     background-size:cover;
     background-repeat:no-repeat;
     width:100vw;
@@ -17,6 +17,11 @@ body {
 header {
     width:90vw;
     padding:5vh 5vw;
+    position:fixed;
+    top:0;
+    z-index:5;
+    color:#fff;
+    transition:0.4s ease-in-out;
 }
 header table {
     width:100%;
@@ -25,7 +30,6 @@ header table {
 .logo {
     font-size:24px;
     width:30% !important;
-    color:#fff;
 }
 header table tr td {
     width:70%;
@@ -36,7 +40,7 @@ nav {
 nav a {
     margin:0px 1.5vw;
     padding:5px 6px;
-    color:#fff;
+    color:inherit;
     text-decoration:none;
     transition:0.4s ease-in-out;
     font-size:16px;
@@ -48,26 +52,27 @@ nav button{
     margin:0px 1.5vw;
     padding:4px 40px;
     border:2px solid rgb(255, 80, 109);
-    color:rgb(255, 80, 109);
+    color:#fff;
     text-decoration:none;
     transition:0.4s ease-in-out;
     font-size:16px;
     border-radius:50px;
     font-family: 'Poppins', sans-serif;
     font-weight:bold;
-    background:transparent;
+    background:rgb(255, 80, 109);
 }
 nav button:hover {
-    color:#fff;
-    background:rgb(255, 80, 109);
-    border:2px solid rgb(255, 80, 109);
+    color:rgb(255, 80, 109);
+    background:#fff;
+    border:2px solid #fff;
     cursor: pointer;
+    box-shadow:0px 3px 6px rgba(0,0,0,0.1);
 }
 #middle {
     position:absolute;
     width:100vw;
     height:100vh;
-    background:transparent;
+    background:linear-gradient(0deg,rgba(0,0,0,1),rgba(0,0,0,0.3));
     display:flex;
     flex-direction: column;
     justify-content: center;
@@ -82,7 +87,7 @@ nav button:hover {
     font-size:65px;
     font-weight: bold;
     margin:1vh 0px;
-    margin-top:30vh !important;
+    margin-top:30vh;
 }
 #middle_head {
     font-size:26px;
@@ -102,12 +107,20 @@ nav button:hover {
     font-weight:bold;
     background:transparent;
     width:20vw;
+    transition:0.4s ease-in-out;
 }
+#middle button:hover { 
+    color:#fff;
+    background:rgb(255, 80, 109);
+    border:3px solid rgb(255, 80, 109);
+    cursor: pointer;
+}
+
 #main {
     width:100vw;
     height:100vh;
-    background:rgb(15,15,15);
-    margin-top:84vh;
+    background:rgb(0,0,0);
+    margin-top:100vh;
     color:#fff;
     font-size:30px;
     text-align:center;
