--- a/fimbo/index.css
+++ b/fimbo/index.css
@@ -10,7 +10,37 @@ body{
     overflow-x:hidden;
     align-items:center;
     font-family: 'Josefin Sans', sans-serif;
-} 
+}
+#loading {
+	width: 100%;
+	height: 100vh;
+	position: fixed;
+	background:#fff;
+	z-index: 9999;
+	display: flex;
+	justify-content: center;
+	flex-direction: column;
+	align-items: center;
+}
+
+#spinner {
+	animation: rotate 1s infinite linear;
+	width: 60px;
+	height: 60px;
+	border: 14px solid rgb(60, 25, 255);
+	border-bottom: 14px solid #fff;
+	border-radius: 100px;
+	margin: 0;
+}
+
+@keyframes rotate {
+	0% {
+		transform: rotate(0deg);
+	}
+	100% {
+		transform: rotate(360deg);
+	}
+}
 #header{
     width:90vw;
     padding:8vh 5vw;
