--- a/index.css
+++ b/index.css
@@ -1,39 +1,39 @@
-body,html{
+body{
     padding:0px;
     margin:0px;
     font-family: 'Comfortaa', cursive;
     font-weight:bold;
-    background:url("background.jpg") center center fixed;
-    background-size:100% auto;
-    transition:1.6s ease-in-out;
-    }
+    background:url("https://images.unsplash.com/photo-1486546910464-ec8e45c4a137?w=1651&q=80") center center fixed;
+    background-size:cover !important;
+    width:100vw;
+    height:100vh;
+    max-width:100vw;
+    overflow-x:hidden;
+}
 #header {
-    width:80%;
-    padding:4% 10%;
-    text-align:center;
+    width:88%;
+    padding:3% 6%;
+    text-align:right;
+    position:absolute;
 }
 #header div{
     display:block;
-}
-#title {
-    font-size:40px;
-    font-family: 'Poppins', sans-serif;
-    color:#fff;
-    margin:0px 20px;
 }
 #links {
     margin:20px 0px;
 }
 #links a{
     margin:0px;
-    color:#fff;
+    color:#000;
     text-decoration:none;
     transition:0.4s ease-in-out;
     padding:8px 10px;
     border-bottom:2px solid transparent;
+    font-weight:bold;
+    font-family: 'Poppins', sans-serif;
 }
 #links a:hover{
-    border-bottom:2px solid #fff;
+    border-bottom:2px solid #000;
 }
 #wtf {
     margin:0px 6vw !important;
@@ -96,40 +96,39 @@ body,html{
 }
 
 #middle {
-    width:100%;
+    width:88%;
     height:100vh;
+    padding:0 6%;
     border-radius:0px;
-    color:white;
+    color:#000;
     display:flex;
     justify-content:center;
     flex-direction:column;
     transition:0.4s ease-in-out;
     z-index:4;
+    background:#fff;
+    border-radius:0px 0px 340px 0px;
 }
 
 #tagline {
-    font-size:50px;
-    width:60%;
-    margin-top:6vh;
+    font-size:40px;
+    width:80%;
+    font-family: 'Poppins', sans-serif;
 }
 
-#tagline span {
-    background-image:linear-gradient(-225deg, rgb(56, 141, 250) 0%, rgb(159, 89, 242) 29%, rgb(245, 47, 98) 67%, rgb(245, 194, 47) 100%);
+#tagline h1 {
+    background:url("https://images.unsplash.com/photo-1486546910464-ec8e45c4a137?w=1651&q=80") center center;
     -webkit-background-clip:text;
     background-clip:text;
     -webkit-text-fill-color: transparent;
-    background-size:500% 500% !important;
-    -webkit-animation: Gradient 100s ease infinite;
-    -moz-animation: Gradient 100s ease infinite;
-    -o-animation: Gradient 100s ease infinite;
-    animation: Gradient 100s ease infinite;
-    font-family: 'Comfortaa', cursive;
+    background-size:cover !important;
 }
 
 #portfolio {
     background:white;
-    width:84%;
-    padding:5% 8%;
+    width:88%;
+    padding:5% 6%;
+    border-radius:0px 340px 340px 0px;
 }
 
 #portfolio div {
@@ -151,17 +150,13 @@ body,html{
     cursor:pointer;
 }
 #portfolio div p{
-    font-size:50px;
-    background-image:linear-gradient(-225deg, rgb(56, 141, 250) 0%, rgb(159, 89, 242) 29%, rgb(245, 47, 98) 67%, rgb(245, 194, 47) 100%);
+    font-size:55px;
+    background:url("https://images.unsplash.com/photo-1486546910464-ec8e45c4a137?w=1651&q=80") center center;
     -webkit-background-clip:text;
     background-clip:text;
     -webkit-text-fill-color: transparent;
-    background-size:500% 500% !important;
-    -webkit-animation: Gradient 100s ease infinite;
-    -moz-animation: Gradient 100s ease infinite;
-    -o-animation: Gradient 100s ease infinite;
-    animation: Gradient 100s ease infinite;
-    font-family: 'Comfortaa', cursive;
+    background-size:cover !important;
+    font-family: 'Poppins', sans-serif;
 }
 #about table tr td {
     padding:8px 30px;
@@ -170,18 +165,14 @@ body,html{
 .project {
     width:515px;
     height:auto;
-    margin:3vh 15px;
+    margin:3vh 25px;
     display:inline-block;
-    padding:4vh 25px;
+    padding:4vh 28px;
     color:#282828;
     border-radius:8px;
     box-shadow:0px 0px 2px #d1d1d1;
     transition:0.4s ease-in-out;
     word-wrap: break-word;
-}
-.project:hover {
-    transform:scale(1.06);
-    box-shadow:0px 0px 8px #d1d1d1;
 }
 .project button {
     background:transparent;
@@ -193,7 +184,7 @@ body,html{
     font-weight:bold;
     transition:0.4s ease-in-out;
     margin:10px 10px;
-    box-shadow:0px 3px 6px #d5d5d5;
+    box-shadow:0px 0px 1px #d1d1d1;
     border:0px;
 }
 .right-arrow {
@@ -203,11 +194,11 @@ body,html{
 
 .project button:hover{
     cursor:pointer;
-    box-shadow:0px 6px 16px #bbbbbb;
+    box-shadow:0px 6px 14px #0000001e;
 }
 
 .project button:focus{
-    box-shadow:inset 0px 6px 10px #bbbbbb;
+    box-shadow:inset 0px 6px 10px #c7c7c7;
     outline:none;
 }
 
@@ -223,30 +214,29 @@ body,html{
 }
 
 ::-webkit-scrollbar-track {
-    background:#000; 
-}
-
-::-webkit-scrollbar-thumb {
     background:#fff; 
 }
 
+::-webkit-scrollbar-thumb {
+    background:#000; 
+}
+
 #details {
-    width:100%;   
+    width:100%;
     text-align:left;
 }
 
 #details a {
     font-size:24px;
     color:#282828;
-    margin-right:4vw;
+    margin-right:8vw;
     margin-left:5px;
-    padding:20px;
     border-radius:50%;
     transition:0.4s ease-in-out;
 }
 
 #details a:hover {
-    box-shadow:0px 6px 10px #d5d5d5;
+    color:#bbbbbb;
 }
 
 #design .project:hover {
@@ -320,11 +310,16 @@ body,html{
     }
     #links {
         margin:20px 0px;
+        text-align:center;
+    }
+    #portfolio {
+        border-radius:0px;
     }
     #middle {
         width:100%;
         border-radius:0px;
         height:100vh;
+        border-radius:0px;
     }
     #tagline {
         width:90%;
@@ -334,7 +329,7 @@ body,html{
         margin:0px 6vw !important;
     }
     #about {
-        text-align:center;
+        text-align:left;
     }
     #about table tr td {
         padding:8px 10px !important;
@@ -353,21 +348,22 @@ body,html{
     #work {
         column-count:1;
         column-gap:0%;
-        text-align:center;
+        text-align:left;
         width:100%;
     }
     .project {
-        width:96%;
-        padding:15px 3vw;
+        width:94%;
+        padding:15px 3% !important;
         margin:2vh 0px !important;
         font-size:14px !important; 
     }
     #contact {
         width:100%;
-        text-align:center;
+        text-align:left;
     }
     .project button {
         font-size:14px;
+        padding:10px 25px;
     }
     .right-arrow {
         font-size:12px;
@@ -379,23 +375,8 @@ body,html{
     #work h1 span{
         font-size:24px;
     }
-    #in_mobile {
-        margin:6vh 0px;
-    }
-
 }
-@-webkit-keyframes Gradient {
-0% {background-position: 0% 50%}
-50% {background-position: 100% 50%}
-100% {background-position: 0% 50%}
-}
-@-moz-keyframes Gradient {
-0% {background-position: 0% 50%}
-50% {background-position: 100% 50%}
-100% {background-position: 0% 50%}
-}
-@keyframes Gradient {
-0% {background-position: 0% 50%}
-50% {background-position: 100% 50%}
-100% {background-position: 0% 50%}
+#in_mobile {
+    margin:4vh 0px;
+    margin-top:8vh;
 }
