--- a/fimbo/index.css
+++ b/fimbo/index.css
@@ -11,36 +11,6 @@ body{
     align-items:center;
     font-family: 'Josefin Sans', sans-serif;
 }
-#loading {
-	width: 100%;
-	height: 100vh;
-	position: fixed;
-	background:#fff;
-	z-index: 9999;
-	display: flex;
-	justify-content: center;
-	flex-direction: column;
-	align-items: center;
-}
-
-#spinner {
-	animation: rotate 1s infinite linear;
-	width: 60px;
-	height: 60px;
-	border: 14px solid rgb(60, 25, 255);
-	border-bottom: 14px solid #fff;
-	border-radius: 100px;
-	margin: 0;
-}
-
-@keyframes rotate {
-	0% {
-		transform: rotate(0deg);
-	}
-	100% {
-		transform: rotate(360deg);
-	}
-}
 #header{
     width:90vw;
     padding:8vh 5vw;
@@ -174,10 +144,10 @@ body{
 
 @media (max-width: 800px){
     .template {
-        width:100vw;
-        max-width:100vw !important;
+        width:86vw;
+        max-width:86vw !important;
         overflow-x:hidden;
-        margin:2vh 0px;
+        margin:2vh 7vw;
         border-radius:0px;
     }
     .temp_image{
